tests/baselines/reference/project/jsFileCompilationDifferentNamesNotSpecifiedWithAllowJs/node/jsFileCompilationDifferentNamesNotSpecifiedWithAllowJs.errors.txt
DifferentNamesNotSpecifiedWithAllowJs/tsconfig.json(3,5): error TS5101: Flag 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify 'ignoreDeprecations: "5.0"' to silence this error.
DifferentNamesNotSpecifiedWithAllowJs/tsconfig.json(3,5): error TS6082: Only 'amd' and 'system' modules are supported alongside --out.


==== DifferentNamesNotSpecifiedWithAllowJs/tsconfig.json (2 errors) ====
    {
      "compilerOptions": {
        "out": "test.js",
        ~~~~~
!!! error TS5101: Flag 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify 'ignoreDeprecations: "5.0"' to silence this error.
        ~~~~~
!!! error TS6082: Only 'amd' and 'system' modules are supported alongside --out.
        "allowJs": true
      }
    }
==== DifferentNamesNotSpecifiedWithAllowJs/a.ts (0 errors) ====
    var test = 10;
==== DifferentNamesNotSpecifiedWithAllowJs/b.js (0 errors) ====
    var test2 = 10; // Should get compiled